# rust-base

./: .gitignore  .prettierrc.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  examples.rs  lib.rs  prelude.rs  utils.rs
src/utils/: dir_entry_from_s.rs
tests/: example_integration_test_alpha.rs  example_integration_test_beta.rs  example_integration_test_group_1.rs  example_integration_test_group_2.rs
tests/example_integration_test_group_1/: example_integration_tests_a.rs  example_integration_tests_b.rs
tests/example_integration_test_group_2/: example_integration_tests_c.rs  example_integration_tests_d.rs
tests/prelude/: mod.rs
